--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,209 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+
+    <form
+    action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+    method="post"
+    name="forms"
+    >
+
+      <fieldset>
+        <legend>Personal information</legend>
+
+        <div class="lastName">
+          <label for="lastName1">
+            Surname:
+            <input
+            type="text"
+            name="lastName"
+            id="lastName1"
+            autocomplete="off"
+            maxlength="124"
+            >
+          </label>
+        </div>
+
+        <div class="firstName">
+          <label for="firstName1">
+            Name:
+            <input
+            type="text"
+            name="firstName"
+            id="firstName1"
+            autocomplete="off"
+            maxlength="124"
+            >
+          </label>
+        </div>
+
+        <div class="age">
+          <label for="age1">
+            How old are You?
+            <input
+            type="number"
+            name="age"
+            id="age1"
+            min="1"
+            max="100"
+            value="12"
+            >
+          </label>
+        </div>
+
+        <div class="date">
+          <label for="birthDate1">
+            Full date of birth:
+            <input
+            type="date"
+            name="birthDate"
+            id="birthDate1"
+            >
+          </label>
+        </div>
+
+        <div class="terms">
+          <label for="terms1">
+            I accept the term of the agreement
+            <input
+            type="checkbox"
+            name="terms"
+            id="terms1"
+            >
+          </label>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Registration</legend>
+
+        <div class="email">
+          <label for="email1">
+            E-mail:
+            <input
+            type="email"
+            name="email"
+            id="email1"
+            placeholder="email@example.com"
+            >
+          </label>
+        </div>
+
+        <div class="password">
+          <label for="password1">
+            Password:
+            <input
+            type="password"
+            name="password"
+            id="password1"
+            minlength="8"
+            maxlength="32"
+            >
+          </label>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+
+        <div class="radioForm">
+          Do you love cats?
+          <label for="Yes1">
+            <input
+            type="radio"
+            name="radio"
+            id="Yes1"
+            value="Yes"
+            >
+            Yes
+          </label>
+
+          <label for="No1">
+            <input
+            type="radio"
+            name="radio"
+            id="No1"
+            value="No"
+            >
+            No
+          </label>
+        </div>
+
+        <div class="color">
+          <label for="color1">
+            What is your favorite color?
+            <input
+            type="color"
+            name="color"
+            id="color1"
+            >
+          </label>
+        </div>
+
+        <div class="time">
+          <label for="timeField1">
+            What time do you go to bed?
+            <input
+            type="time"
+            name="time"
+            id="timeField1"
+            step="1"
+            >
+          </label>
+        </div>
+
+        <div class="brand">
+          <label>
+            What are your favorite brand of cars?
+            <select name="brand" multiple>
+              <option value="BMW">BMW</option>
+              <option value="Audi">Audi</option>
+              <option value="Lada">Lada</option>
+            </select>
+          </label>
+        </div>
+
+        <div class="rate">
+          <label for="rangeField1">
+            How do you rate our work?
+            <input
+            type="range"
+            name="rate"
+            id="rangeField1"
+            value="0"
+            >
+          </label>
+        </div>
+
+      </fieldset>
+
+      <fieldset>
+        <legend>Additional info:</legend>
+
+        <div class="comments">
+          <label class="feedbackField">
+            Comments:
+            <textarea name="feedback">
+
+            </textarea>
+          </label>
+        </div>
+
+        <div class="recommends">
+          <label>
+            Would you recommend us?
+            <select name="brand">
+              <option value="yes">yes</option>
+              <option value="no">no</option>
+            </select>
+          </label>
+        </div>
+
+      </fieldset>
+
+      <button type="submit">Submit</button>
+    </form>
+
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
