--- a/src/index.html
+++ b/src/index.html
@@ -11,57 +11,51 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
     <form
     action="https://mate-academy-form-lesson.herokuapp.com/create-application"
     method="post"
     name="forms"
     >
-
-      <fieldset>
+      <fieldset class="field">
         <legend>Personal information</legend>
-
         <div class="lastName">
-          <label for="lastName1">
+          <label for="lastName">
             Surname:
             <input
             type="text"
             name="lastName"
-            id="lastName1"
+            id="lastName"
             autocomplete="off"
             maxlength="124"
             >
           </label>
         </div>
-
-        <div class="firstName">
-          <label for="firstName1">
+        <div class="div firstName">
+          <label for="firstName">
             Name:
             <input
             type="text"
             name="firstName"
-            id="firstName1"
+            id="firstName"
             autocomplete="off"
             maxlength="124"
             >
           </label>
         </div>
-
-        <div class="age">
-          <label for="age1">
+        <div class="div age">
+          <label for="age">
             How old are You?
             <input
             type="number"
             name="age"
-            id="age1"
+            id="age"
             min="1"
             max="100"
             value="12"
             >
           </label>
         </div>
-
-        <div class="date">
+        <div class="div date">
           <label for="birthDate1">
             Full date of birth:
             <input
@@ -71,8 +65,7 @@
             >
           </label>
         </div>
-
-        <div class="terms">
+        <div class="div terms">
           <label for="terms1">
             I accept the term of the agreement
             <input
@@ -83,12 +76,10 @@
           </label>
         </div>
       </fieldset>
-
-      <fieldset>
+      <fieldset class="field">
         <legend>Registration</legend>
-
         <div class="email">
-          <label for="email1">
+          <label for="email">
             E-mail:
             <input
             type="email"
@@ -98,71 +89,64 @@
             >
           </label>
         </div>
-
-        <div class="password">
-          <label for="password1">
+        <div class="div password">
+          <label for="password">
             Password:
             <input
             type="password"
             name="password"
-            id="password1"
+            id="password"
             minlength="8"
             maxlength="32"
             >
           </label>
         </div>
       </fieldset>
-
-      <fieldset>
+      <fieldset class="field">
         <legend>An interesting fact about you!</legend>
-
         <div class="radioForm">
           Do you love cats?
-          <label for="Yes1">
+          <label for="Yes">
             <input
             type="radio"
             name="radio"
-            id="Yes1"
+            id="Yes"
             value="Yes"
             >
             Yes
           </label>
-
-          <label for="No1">
+          <label for="No">
             <input
             type="radio"
             name="radio"
-            id="No1"
+            id="No"
             value="No"
             >
             No
           </label>
         </div>
-
-        <div class="color">
-          <label for="color1">
+        <div class="div color">
+          <label for="color">
             What is your favorite color?
             <input
             type="color"
             name="color"
-            id="color1"
+            id="color"
             >
           </label>
         </div>
-
-        <div class="time">
-          <label for="timeField1">
+        <div class="div time">
+          <label for="timeField">
             What time do you go to bed?
             <input
             type="time"
             name="time"
-            id="timeField1"
+            id="timeField"
             step="1"
             >
           </label>
         </div>
-
-        <div class="brand">
+        <div class="div brand">
           <label>
             What are your favorite brand of cars?
             <select name="brand" multiple>
@@ -172,34 +156,28 @@
             </select>
           </label>
         </div>
-
-        <div class="rate">
-          <label for="rangeField1">
+        <div class="div rate">
+          <label for="rangeField">
             How do you rate our work?
             <input
             type="range"
             name="rate"
-            id="rangeField1"
+            id="rangeField"
             value="0"
             >
           </label>
         </div>
-
       </fieldset>
-
-      <fieldset>
+      <fieldset class="field">
         <legend>Additional info:</legend>
-
         <div class="comments">
           <label class="feedbackField">
             Comments:
             <textarea name="feedback">
-
             </textarea>
           </label>
         </div>
-
-        <div class="recommends">
+        <div class="div recommends">
           <label>
             Would you recommend us?
             <select name="brand">
@@ -208,9 +186,7 @@
             </select>
           </label>
         </div>
-
       </fieldset>
-
       <button type="submit">Submit</button>
     </form>
 
